created initial html navigation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 <body>
-    
+     <!-- navigation bar -->
+     <div class="nav">
+        <div class="logo">
+            <a href="/">
+                <p><span id="code">
+                    </span> <span id="name">Trevin Livele </span><span id="code"></span></p>
+            </a>
+        </div>
+        <div id="mobile">
+            <p>Menu</p>
+        </div>
+        <nav id="nav">
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#experiences">Services & Experiences</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
