added home page section

--- a/index.html
+++ b/index.html
@@ -40,5 +40,20 @@
             </ul>
         </nav>
     </div>
+
+
+
+        <!-- homepage section !-->
+        <div class="row mb-5 animate__animated animate__fadeInUp">
+            <div class="col-lg-6 mt-5">
+                <h1 class="my_name">Hi there, I'm Trevin Livele <span>🖐️🖐️🖐️🖐️🖐️🖐️🖐️🖐️🖐️🖐️🖐️</span></h1>
+                <p class="bio">A passionate Full-stack Software Developer having an experience of building Web applications with
+                    Python Django and flask</p>
+                <div class="buttons mt-4">
+                    <a href="#contact" class="btn btn-outline-primary">contact Me</a>
+                    <a target="_blank" href="#" class="btn btn-outline-primary ml-4">see my cv</a>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
