--- a/index.html
+++ b/index.html
@@ -55,5 +55,46 @@
                 </div>
             </div>
         </div>
+
+
+
+
+
+        <div>
+            <span class="click-slider">
+                <h1>projects i have worked on click on each slider to view</h1>
+            </span>
+
+
+            <div class="container-1">
+                <div class="panel active"
+                    style="background-image: url('/img/screenshots/greatcart.png');">
+                    <h3>greatcart</h3>
+                </div>
+                <div class="panel"
+                    style="background-image: url('/img/screenshots/streetfood.png');">
+                    <h3>streetfood website</h3>
+                </div>
+                <div class="panel"
+                    style="background-image: url('/img/screenshots/photography.png');">
+                    <h3>Photography website</h3>
+
+                </div>
+
+                <div class="panel"
+                    style="background-image: url('/img/screenshots/cardealer.png');">
+                    <h3>Car dealer site</h3>
+                </div>
+
+                <div class="panel"
+                    style="background-image: url('/img/screenshots/trevtech.png');">
+                    <h3>Trev tech website</h3>
+
+                </div>
+            </div>
+
+        </div>
+
+
 </body>
 </html>
