added the about me section in html

--- a/index.html
+++ b/index.html
@@ -95,7 +95,22 @@
 
         </div>
 
+ <!-- about me  -->
+ <div>
+    <div id="about" class="row animate__animated animate__zoomIn">
+        <div class="col-lg-6 mt-5">
+            <h1 class="about-me">About me</h1>
+            <p class="bio_me mt-3">I am a Full stack developer who loves clean, elegant styling and has a lot of
+                experience in the
+                production of CSS, HTML5, Bootstrap, JavaScript, PHP,Angular Js, MYSQL and
+                Postgres for databases. I am currently at moringa school furthering my studies in Software Development.
+                I
+                play hockey and football for fun. I also like photography and video editing</p>
 
+        </div>
+    </div>
+
+</div>
 </body>
 
 <script src="/js/script.js"></script>
