--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     Python Django and flask</p>
                 <div class="buttons mt-4">
                     <a href="#contact" class="btn btn-outline-primary">contact Me</a>
-                    <a target="_blank" href="#" class="btn btn-outline-primary ml-4">see my cv</a>
+                    <a target="_blank" href="https://drive.google.com/file/d/1TkAHhdI_j5H7c6DdaMUBBYyKLj_updoe/view?usp=sharing" class="btn btn-outline-primary ml-4">see my cv</a>
                 </div>
             </div>
         </div>
