--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <div class="buttons mt-4">
                     <a href="#contact" class="btn btn-outline-primary">contact Me</a>
                     <a target="_blank" href="https://drive.google.com/file/d/1TkAHhdI_j5H7c6DdaMUBBYyKLj_updoe/view?usp=sharing" class="btn btn-outline-primary ml-4">see my cv</a>
+                    <a target="_blank" href="#" class="btn btn-outline-primary ml-4">see my Resume</a>
+
                 </div>
             </div>
         </div>
