--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
 
             <div class="container-1">
                 <div class="panel active"
-                    style="background-image: url('/img/screenshots/greatcart.png');">
+                    style="background-image: url('./img/screenshots/greatcart.png');">
                     <h3>greatcart</h3>
                 </div>
                 <div class="panel"
-                    style="background-image: url('/img/screenshots/streetfood.png');">
+                    style="background-image: url('./img/screenshots/streetfood.png');">
                     <h3>streetfood website</h3>
                 </div>
                 <div class="panel"
-                    style="background-image: url('/img/screenshots/photography.png');">
+                    style="background-image: url('./img/screenshots/photography.png');">
                     <h3>Photography website</h3>
 
                 </div>
 
                 <div class="panel"
-                    style="background-image: url('/img/screenshots/cardealer.png');">
+                    style="background-image: url('./img/screenshots/cardealer.png');">
                     <h3>Car dealer site</h3>
                 </div>
 
@@ -156,7 +156,7 @@
     <div id="contact" class="row mb-5 mt-4 contactme">
         <div class="col-lg-4">
             <div class="img-rounded">
-                <img class="m-5" src="img/profile.jpeg" alt="Image of me">
+                <img class="m-5" src="./img/profile.jpeg" alt="Image of me">
             </div>
             
         </div>
