--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="panel"
-                    style="background-image: url('/img/screenshots/trevtech.png');">
+                    style="background-image: url('./img/screenshots/trevtech.png');">
                     <h3>Trev tech website</h3>
 
                 </div>
