added initial expirience section Html

--- a/index.html
+++ b/index.html
@@ -148,6 +148,96 @@
 
 
 
+
+
+
+
+
+
+  <!-- Experiences -->
+  <div id="experiences" class="row mb-5">
+    <h1 class="text-white headings mt-4 mb-4">Experiences</h1>
+    <div class="col-lg-4 mb-5">
+        <div class="card card-customize">
+            <div class="card-header p-5 bg-card">
+                <h4 class="text-white text-center">DSC JKUAT</h4>
+            </div>
+            <div class="card-body">
+                <h5 class="text-center text-white mt-3">DSC Co-Lead</h5>
+                <p class="text-center text-white mt-3">2019 - 2020</p>
+                <p class="card-text text-white text-center description_company">
+                    Developer Student Clubs is a Google Developers program for university students to learn
+                    mobile and web development skills, design thinking skillsand leadership skills.
+                <ul class="text-white">
+                    <li>I was the web department leader</li>
+                    <li>Holding events/meetups</li>
+                    <li>Developed and maintains club website</li>
+                </ul>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 mb-5">
+        <div class="card card-customize">
+            <div class="card-header p-5 bg-jucsa">
+                <h4 class="text-white text-center">JUCSA Club</h4>
+            </div>
+            <div class="card-body">
+                <h5 class="text-center text-white mt-3">Head of Department</h5>
+                <p class="text-center text-white mt-3">2019 - 2020</p>
+                <p class="card-text text-white text-center description_company">
+                    JUCSA is an innovation club in Jomo Kenyatta University where by the students get a platform
+                    to
+                    learn, present their ideas and innovative thoughts and also engage in field work activities
+                    and events. The club not only offers resources like learning materials but also boosts their
+                    budding ideas by converting them into invention of something substantial. It also creates a
+                    social environment where students with various technology experiences come together and
+                    share information with one another.
+                <ul class="text-white">
+                    <li>I was the web department leader</li>
+                    <li>Holding events/meetups</li>
+                    <li>Developed and maintains club website</li>
+                </ul>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 mb-5">
+        <div class="card card-customize">
+            <div class="card-header p-5 bg-comp">
+                <h4 class="text-white text-center">JKUAT ICT DIRECTORATE</h4>
+            </div>
+            <div class="card-body">
+                <h5 class="text-center text-white mt-3">Attachment</h5>
+                <p class="text-center text-white mt-3">Jan 2020 - April 2020</p>
+                <p class="card-text text-white text-center description_company">
+                    It was a worthwhile experience working at the JKUAT ICT Directorate. The friendly welcoming
+                    staff
+                    and the space they have created for a trainee allowed me with ample opportunities to learn
+                    and know myself as a worker. These experiences brought out my strength and also the areas I
+                    needed to improvise. It added more confidence to my professional approach, built a stronger
+                    positive attitude and taught me how to work in a team as a player.
+                <ul class="text-white">
+                    <li>Network maintainance</li>
+                    <li>Installing Wi-Fi access points</li>
+                    <li>Configuring routers</li>
+                    <li>Repairing Computers/printers</li>
+                </ul>
+                </p>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
+
+
+
+
+
 <footer>
 
 <div id="footer">
