--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
                         I
                         play hockey and football for fun. I also like photography and video editing</p>
 
+
+
+                        <h1>HOBIES</h1>
+                        <h3>I like watching football and playing hockey during my free time </h3>
+
                 </div>
             </div>
 
