--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 
 
 
-                        <h1>HOBIES</h1>
-                        <h3>I like watching football and playing hockey during my free time </h3>
+                        <h1>Hobies</h1>
+                        <h2>I like watching football and playing hockey during my free time </h2>
 
                 </div>
             </div>
