chaged h1 tags to p tags

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
                         <h1>Hobies</h1>
-                        <h2>I like watching football and playing hockey during my free time </h2>
+                        <p>I like watching football and playing hockey during my free time <p>
 
                 </div>
             </div>
