chaged the contact me section

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="col-lg-8">
                 <h2 class="text-white headings">Contact  me!</h2>
                 <p class="bio_me">Discuss a project or just want to say hi? My Inbox is open for all.</p>
-                <h6 class="text-white">"Web Developer | Software Developer | Full-stack Developer | PHP Developer |
+                <h6 class="text-white">"Web Developer | Software Developer | Full-stack Developer | Java Developer |
                     Python Developer | Backend Developer | Frontend Developer | Angular Js Developer"</h6>
                 <p class="text-white"><i class="fas fa-map-marker-alt"></i> <span class="ml-3">Nairobi, Kenya</span></p>
                 <p class="text-white">Open for opportunities: Yes</p>
